{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 16,
  "lineage": "57c1849e-6890-b547-06f6-4ec951e00e46",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "uat_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:061039790334:internet-gateway/igw-07dede3a97a2b8526",
            "id": "igw-07dede3a97a2b8526",
            "owner_id": "061039790334",
            "tags": {
              "Name": "uat-igw"
            },
            "tags_all": {
              "Name": "uat-igw"
            },
            "vpc_id": "vpc-0c6a2cfc38e99e2b3"
          },
          "dependencies": [
            "aws_vpc.uat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "uat_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:061039790334:route-table/rtb-01a07a7236362b451",
            "id": "rtb-01a07a7236362b451",
            "owner_id": "061039790334",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07dede3a97a2b8526",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uat-route-table"
            },
            "tags_all": {
              "Name": "uat-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6a2cfc38e99e2b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.uat_igw",
            "aws_vpc.uat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "uat_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02eaa0422ccdf198d",
            "route_table_id": "rtb-01a07a7236362b451",
            "subnet_id": "subnet-0ff4c563111580834"
          },
          "dependencies": [
            "aws_internet_gateway.uat_igw",
            "aws_route_table.uat_route_table",
            "aws_subnet.uat_subnet_1",
            "aws_vpc.uat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "uat_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f978b5bbee322b5e",
            "route_table_id": "rtb-01a07a7236362b451",
            "subnet_id": "subnet-02a285428c33d2d1f"
          },
          "dependencies": [
            "aws_internet_gateway.uat_igw",
            "aws_route_table.uat_route_table",
            "aws_subnet.uat_subnet_2",
            "aws_vpc.uat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "uat_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:061039790334:security-group/sg-0db85baf9f223fc51",
            "description": "Allow inbound traffic to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db85baf9f223fc51",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL from anywhere",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "uat-db-sg",
            "name_prefix": "",
            "owner_id": "061039790334",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "uat-db-sg"
            },
            "tags_all": {
              "Name": "uat-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6a2cfc38e99e2b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.uat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "uat_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:061039790334:subnet/subnet-0ff4c563111580834",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff4c563111580834",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061039790334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uat-subnet-1"
            },
            "tags_all": {
              "Name": "uat-subnet-1"
            },
            "vpc_id": "vpc-0c6a2cfc38e99e2b3"
          },
          "dependencies": [
            "aws_vpc.uat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "uat_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:061039790334:subnet/subnet-02a285428c33d2d1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a285428c33d2d1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061039790334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uat-subnet-2"
            },
            "tags_all": {
              "Name": "uat-subnet-2"
            },
            "vpc_id": "vpc-0c6a2cfc38e99e2b3"
          },
          "dependencies": [
            "aws_vpc.uat_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "uat_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:061039790334:vpc/vpc-0c6a2cfc38e99e2b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-052d78c5146762bd0",
            "default_route_table_id": "rtb-01cc6a8bbfcee4689",
            "default_security_group_id": "sg-0fe6fa20481d40017",
            "dhcp_options_id": "dopt-0a48340d011ffedc8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c6a2cfc38e99e2b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01cc6a8bbfcee4689",
            "owner_id": "061039790334",
            "tags": {
              "Name": "uat-vpc"
            },
            "tags_all": {
              "Name": "uat-vpc"
            }
          }
        }
      ]
    }
  ]
}